syntax = "proto3";

package sec01;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.lokesh.sec01";


message Output {
  int32 value = 1;
}

message RequestSize {
  int32 size = 1;
}

service FlowControlService {
  rpc GetMessages(stream RequestSize) returns (stream Output);
}